Replacing 'OpenMoko' with 'Openmoko'

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -1,8 +1,8 @@
-This article is a place to collect various thoughts about the future of the [[OpenMoko]] software platform.  Most wish list ideas have been linked from this page, but you may also wish to check all pages [[:Category:Ideas|that have a category of 'Ideas']].
+This article is a place to collect various thoughts about the future of the [[Openmoko]] software platform.  Most wish list ideas have been linked from this page, but you may also wish to check all pages [[:Category:Ideas|that have a category of 'Ideas']].
 
 == Development ==
 === Painless SDK installation & Setup ===
-Our goal should be a completely painless setup for somebody wanting to develop using [[OpenMoko]]
+Our goal should be a completely painless setup for somebody wanting to develop using [[Openmoko]]
 
 * one command for installation ("apt-get install openmoko" as in [http://blog.leggewie.org/?p=39 apt-get'able Openembedded])
 * one command to start Xnest (openmoko-xephyr?)
@@ -30,24 +30,24 @@ Glade code generation is deprecated, so we don't want to use it. The Gtk+ powers
 
 ==== Built-in Scripting Language ====
 {{Main|Wishlist:BuiltInScriptingLanguage}}
-There was a [http://lists.openmoko.org/pipermail/community/2007-January/001909.html fruitful discussion about a built-in scripting language on the mailing list in January.]  Many people feel that it is very important for OpenMoko to choose a scripting language to ship as default in the standard OpenMoko firmware.
+There was a [http://lists.openmoko.org/pipermail/community/2007-January/001909.html fruitful discussion about a built-in scripting language on the mailing list in January.]  Many people feel that it is very important for Openmoko to choose a scripting language to ship as default in the standard Openmoko firmware.
 ==== Easy build of the existing autotools - based packages ====
-In the ideal case OpenMoko should exist on the top of the usual ./configure - make workflow which is typical for the majority of the C/C++ based open source projects. It should not require to rewrite or even replace the existing Makefile.am files of the project being ported, and it should allow to pass the needed parameters to the project configure script. Maybe OpenMoko project could be a bigger project having one or more (if some are libraries) autotools - based packages in its separate folders and include the proper documentation how to "wire" the standard autotools based package to the OpenMoko infrastructure.
+In the ideal case Openmoko should exist on the top of the usual ./configure - make workflow which is typical for the majority of the C/C++ based open source projects. It should not require to rewrite or even replace the existing Makefile.am files of the project being ported, and it should allow to pass the needed parameters to the project configure script. Maybe Openmoko project could be a bigger project having one or more (if some are libraries) autotools - based packages in its separate folders and include the proper documentation how to "wire" the standard autotools based package to the Openmoko infrastructure.
 
 ===Foreign Widget Set Bindings ===
 ==== Qt Integration ====
-The Trolltech folks have a great widget library. I'd like to interface OpenMoko with Qt4, so that we can write Qt4 applications for the phone which don't look alienated.
+The Trolltech folks have a great widget library. I'd like to interface Openmoko with Qt4, so that we can write Qt4 applications for the phone which don't look alienated.
 
 ==== Maemo Integration ====
-The Maemo folks have created a successful standard for Webpad applications. I'd like to have a set of MaemoMoko and MokoMaemo wrapper classes that allow me add support for running OpenMoko applications on Maemo and vice versa. Perhaps we can get help from the Nokia OSS folks for that.
+The Maemo folks have created a successful standard for Webpad applications. I'd like to have a set of MaemoMoko and MokoMaemo wrapper classes that allow me add support for running Openmoko applications on Maemo and vice versa. Perhaps we can get help from the Nokia OSS folks for that.
 
 ==== wxWidgets Integration ====
-wxWidgets is a cross-platform application framework that's very popular (I'd say, #3 after Qt and Gtk+). On Linux, wxWidgets uses Gtk+ to implement the widgets. It shouldn't be hard to add support for the additional OpenMoko classes to wxWidgets hence supporting the native OpenMoko look and feel for wxWidgets applications.
+wxWidgets is a cross-platform application framework that's very popular (I'd say, #3 after Qt and Gtk+). On Linux, wxWidgets uses Gtk+ to implement the widgets. It shouldn't be hard to add support for the additional Openmoko classes to wxWidgets hence supporting the native Openmoko look and feel for wxWidgets applications.
 
-wxWidgets team wants OpenMoko classes too and we (wxWidgets) plan to include this project as one of our ideas for  [http://google-code-updates.blogspot.com/2007/02/speaking-of-summer.html GSoC 2007]
+wxWidgets team wants Openmoko classes too and we (wxWidgets) plan to include this project as one of our ideas for  [http://google-code-updates.blogspot.com/2007/02/speaking-of-summer.html GSoC 2007]
 
 ==== SDL Integration ====
-SDL is ''the'' game developer library. There are tons of SDL games out there. We should add OpenMoko support into SDL.
+SDL is ''the'' game developer library. There are tons of SDL games out there. We should add Openmoko support into SDL.
 
 ==== Cocoa / GNUstep ====
 Allows to use MacOS X as a development platform.
@@ -59,13 +59,13 @@ Python bindings seem to be a commonly requested feature.
 [[User:Mickey]] says, "They are kind of usable on the [http://www.maemo.org Nokia 770], but it's at the lower end of being bearable. We should keep this in mind -- Gtk+ already comes with Python Bindings, so we "just" would need to wrap libmoko*. I would prefer to leave this to the community do though, since it doesn't make sense to start wrapping the API until we have a stable API -- and I can imagine it will take us a couple of months after going open until we can start with stabilizing the libmoko API."
 
 ==== C++ bindings ====
-There is a whole skilled C++ community coming from the [http://qtopia.net Qtopia] and [http://opie.handhelds.org Opie] projects. If we would consider basing OpenMoko C++ Bindings on [http://www.gtkmm.org/ Gtkmm], then we could drag these guys in.
+There is a whole skilled C++ community coming from the [http://qtopia.net Qtopia] and [http://opie.handhelds.org Opie] projects. If we would consider basing Openmoko C++ Bindings on [http://www.gtkmm.org/ Gtkmm], then we could drag these guys in.
 
 ==== Ruby bindings ====
-Ruby and ruby-(gtk|glade) already ported to OpenMoko according to [http://lists.openmoko.org/pipermail/openmoko-apps/2007-May/000040.html this ] and [http://groups.google.de/group/comp.lang.ruby/browse_thread/thread/6bee9970cf055504 this] mesages. It just have to be included to distribution (only 4.9 MB!)
+Ruby and ruby-(gtk|glade) already ported to Openmoko according to [http://lists.openmoko.org/pipermail/openmoko-apps/2007-May/000040.html this ] and [http://groups.google.de/group/comp.lang.ruby/browse_thread/thread/6bee9970cf055504 this] mesages. It just have to be included to distribution (only 4.9 MB!)
 
 ==== Java bindings ====
-People who concentrate on Java programming would like to have the OpenMoko port of some java virtual machine. GNU Classpath team a lot of great work in the past creating easily portable implementation. Sun's recently open sourced code could also be ported. 
+People who concentrate on Java programming would like to have the Openmoko port of some java virtual machine. GNU Classpath team a lot of great work in the past creating easily portable implementation. Sun's recently open sourced code could also be ported. 
 ==== Other bindings ====
 * Perl
 * C#
@@ -85,7 +85,7 @@ In the future there could be complete, unofficial "product images" that are crea
 === Wishlist voting ===
 There could be a kind of voting system like they have at one of those big computer manufacturers homepage. Then the community could vote for the ideas that are most important to them. This would especially make sense for the hardware wishlist, because the hardware is still the part which can't be done by the community that easily.
 
-Here: [http://www.fevote.com/openmoko OpenMoko suggestion board]
+Here: [http://www.fevote.com/openmoko Openmoko suggestion board]
 
 == Software: Additional features ==
 
@@ -133,7 +133,7 @@ On (at least some) prepaid [http://en.wikipedia.org/wiki/Unstructured_Supplement
 
 
 ==== Anti-stutter software ====
-Delayed Auditory Feedback (DAF) has shown to reduce stuttering in individuals by 70%. By using the microphone, it should be pretty simple to implement this on the OpenMoko. The DAF functionality should also be present during phone calls. See http://en.wikipedia.org/wiki/Delayed_auditory_feedback for more information.
+Delayed Auditory Feedback (DAF) has shown to reduce stuttering in individuals by 70%. By using the microphone, it should be pretty simple to implement this on the Openmoko. The DAF functionality should also be present during phone calls. See http://en.wikipedia.org/wiki/Delayed_auditory_feedback for more information.
 
 ====Minimize In-Call mode (check address book while in call)====
 On my locked phones I always find it annoying that one can not use other features while a call is in progress. In particular, I'd like to access the address book so that we can (1) give a caller someone else's phone number (or other info) and (2) lookup a phone number when using a calling card or some other proxy.
@@ -170,7 +170,7 @@ For the Neo to know which area code to use (or not use) the current or last GPS 
 An option to record phone conversations.  Would be helpful to have the device always recording for every call, with the sound data encoded to low quality Ogg Vorbis or SPEEX and stored in RAM.  At the end of the conversation the user would have the option to save to flash or discard the conversation.  This idea could also be applied to voicemail so you could save voicemails locally.
 
 ====Unlicensed Mobile Access (UMA)====
-T-Mobile recently rolled out a UMA service that hands off calls between the GSM network and WiFi access points. Only a few phones support it right now, this could be a rather unique feature if OpenMoko can implement it.
+T-Mobile recently rolled out a UMA service that hands off calls between the GSM network and WiFi access points. Only a few phones support it right now, this could be a rather unique feature if Openmoko can implement it.
 
 This can be combined with a GPS map to show where local free hubs are.
 
@@ -236,7 +236,7 @@ Full page zoom is a very good feature. If possible, people would want to browse 
 
 The [[BigPageWidget]] proposal suggests 'Full Page Zoom' should be implemented as a widget available to all applications.
 
-* If the processor and memory could afford, it is good to just use [http://www.mozilla.org/projects/firefox/3.0a8/releasenotes/ Firefox 3] in OpenMoko. It has implemented latest gecko's full-page-zoom ability. With certain modification, we could do the same zoom like iPhone's Safari.
+* If the processor and memory could afford, it is good to just use [http://www.mozilla.org/projects/firefox/3.0a8/releasenotes/ Firefox 3] in Openmoko. It has implemented latest gecko's full-page-zoom ability. With certain modification, we could do the same zoom like iPhone's Safari.
 * Firefox 3 may be a big eater. A cut-down version of it may be good enough.
 * If this is not practical, Minimo with full-page-zoom ability is good.
 
@@ -248,7 +248,7 @@ The [[BigPageWidget]] proposal suggests 'Full Page Zoom' should be implemented a
 ==== Widget support ====
 Built-in browser with the ability to install widget shortcuts (aka links) in the main phone menu, also some apis for interfacing with the other functionality of the phone like adding contacts, reading contacts, reading gps-psoition etc.. (maybe there is some defacto widget standard that could be used)
 
-There is a [http://www.w3.org/TR/widgets/ W3C spec] being developed, which may not be exactly what the original proposal had in mind, but it is about writing simple applications with HTML, SVG and JavaScript. It is mainly Opera's work, and while most [http://widgets.opera.com/ developed widgets are not very useful], there are some that are, and it creates a very nice development platform, especially for mobile devices. So, I think it makes an awful lot of sense for OpenMoko to support this spec.
+There is a [http://www.w3.org/TR/widgets/ W3C spec] being developed, which may not be exactly what the original proposal had in mind, but it is about writing simple applications with HTML, SVG and JavaScript. It is mainly Opera's work, and while most [http://widgets.opera.com/ developed widgets are not very useful], there are some that are, and it creates a very nice development platform, especially for mobile devices. So, I think it makes an awful lot of sense for Openmoko to support this spec.
 
 ===Media===
 ====Music/Video Software====
@@ -308,7 +308,7 @@ advantages:
 Support for vocabulary training with flashcard system (also usable for other content than foreign language words!)
 
 ==== Flickr uploader ====
-A simply, drag & drop uploader, tagger and organizer to upload images on phone to [http://flickr.com Flickr], with support for various languages. A good base could be the cross-platform uploader [http://juploadr.org/ jUploadr], written in Java and working on Windows, Mac and Linux. But, most of all, the best '''GPL''' program which actually do this work is '''[http://mobilepushr.jottit.com/ Mobile Pushr]''', written in C and Cocoa for iPhone, must be probably ported in python to work on OpenMoko.
+A simply, drag & drop uploader, tagger and organizer to upload images on phone to [http://flickr.com Flickr], with support for various languages. A good base could be the cross-platform uploader [http://juploadr.org/ jUploadr], written in Java and working on Windows, Mac and Linux. But, most of all, the best '''GPL''' program which actually do this work is '''[http://mobilepushr.jottit.com/ Mobile Pushr]''', written in C and Cocoa for iPhone, must be probably ported in python to work on Openmoko.
 
 ==== Virtual picture viewer ====
 I believe you could display pictures larger than the FR screen by using the accelerometer data to simulate the physical screen as a window into a larger pic.
@@ -330,7 +330,7 @@ Some Screenshots are [http://www.gnome.org/projects/tomboy/images/ here].
 
 ==== Calendar ====
 
-A nice calendar application should be implemented in OpenMoko. This tool should have a syncing feature with your desktop computer.
+A nice calendar application should be implemented in Openmoko. This tool should have a syncing feature with your desktop computer.
 The tool should have a reminder feature and other features like other mobile phones already have.
 
 I think synchronization sould be handled by computer with opensync+syncml based tool, not by calendar itself. --[[User:Antono|Antono]] 12:25, 7 January 2008 (CET)
@@ -388,8 +388,8 @@ File data about fueling your car (date/time, liters, price, mileage, ...) and di
 Advanced features could include:
 * Automatically storing the GPS coordinates of the place where the car has been fueled (can be deactivated)
 * Sending the data to a central server which collects the information ( spritmonitor.de, anything else ?)
-* Let the OpenMoko receive fuel logs per SMS (e.g. if my wife with a non-openmoko mobile fuels the car and wants to file the data using her mobile phone)
-* Let the OpenMoko device act as SMS gateway for non-openmoko devices to easily send the data to the central server
+* Let the Openmoko receive fuel logs per SMS (e.g. if my wife with a non-openmoko mobile fuels the car and wants to file the data using her mobile phone)
+* Let the Openmoko device act as SMS gateway for non-openmoko devices to easily send the data to the central server
 * Also support for air log for divers. Not that you will take this device under water but for the crew at the surface.
 
 ==== Keep in touch reminder ====
@@ -490,7 +490,7 @@ SMS comes in, gets forward to your inbox, like any other piece of mail.  Appropr
 * '''SMS-filter chain''', for stuff like Codeword-SMS above, Theft-mode activation, auto-response (reply with gsm-position for "Where are you?"), auto-substitution (like replace $POS with gsm-position in outgoing SMS).
 * '''SCROOGE-SMS'''  This is an intelligent SMS router.    When you write your SMS you get the option of how to send it
 ** By standard carrier SMS - cost 10cents
-** By OpenMoko SCROOGE SERVER - this will send your SMS to the OpenMoko Community SCROOGE SERVER next time you have WiFi - the phone will remind you to turn on WiFi when it knows you are in places where you have WiFi access.   The person you are sending to picks up when they come into WiFi Range.    This comes with an intelligent reminder that tells you that message has still not been delivered in 24 hours and would you now like to send it by a paymethod.    This is better than IM because both parties do not have to have WiFi at the same time. - cost FREE
+** By Openmoko SCROOGE SERVER - this will send your SMS to the Openmoko Community SCROOGE SERVER next time you have WiFi - the phone will remind you to turn on WiFi when it knows you are in places where you have WiFi access.   The person you are sending to picks up when they come into WiFi Range.    This comes with an intelligent reminder that tells you that message has still not been delivered in 24 hours and would you now like to send it by a paymethod.    This is better than IM because both parties do not have to have WiFi at the same time. - cost FREE
 ** By email/Wifi - cost FREE
 ** By email/GPRS - cost ?
 ** Too many options!!!
@@ -639,7 +639,7 @@ For GPS conversions see gpsbabel [http://www.gpsbabel.org]
 
 ===== An Postfix Notation (RPN) calculator =====
 
-Many engineers, computer scientists and other groups who have grown to enjoy the simplicity and ease of an postfix notation calculator will miss them when they give up other platforms to move to OpenMoko.  A RPN calculator will increase adoption by providing one of the tools that other platforms have provided for many years.
+Many engineers, computer scientists and other groups who have grown to enjoy the simplicity and ease of an postfix notation calculator will miss them when they give up other platforms to move to Openmoko.  A RPN calculator will increase adoption by providing one of the tools that other platforms have provided for many years.
 
 ===== Scientific Functions =====
 
@@ -651,7 +651,7 @@ On ARM machine, Windows CE API emulator, like Wine on x86 machines.
 
 ==== PalmOS Emulator ====
 
-The Access group is probably coming out with their Linux platform any time soon. One of the components is a PalmOS emulator which I'd like to see working on OpenMoko as well. There are literally thousands of PalmOS apps.
+The Access group is probably coming out with their Linux platform any time soon. One of the components is a PalmOS emulator which I'd like to see working on Openmoko as well. There are literally thousands of PalmOS apps.
 
 I'd like to see a Windows CE Emulator with active sync support.
 
@@ -779,7 +779,7 @@ In situations where the hand is not experiencing the same source of vibration th
 These features would best be implemented in the rendering and touch libraries so they could be activated for all applications.
 
 ==== Tapping as input ====
-If I understand correctly the accelerometer should be capable to be used as a simple input. When OpenMoko is in the pocket, simple taps against the pocket should be possible to use as input. For example when there is an incoming call and the user is notified using a headset then one tap would accept the call and two concurrent taps against the pocket would cancel it. This can also be used for lot more.
+If I understand correctly the accelerometer should be capable to be used as a simple input. When Openmoko is in the pocket, simple taps against the pocket should be possible to use as input. For example when there is an incoming call and the user is notified using a headset then one tap would accept the call and two concurrent taps against the pocket would cancel it. This can also be used for lot more.
 ==== Pedometer ====
 The accelerometers should be able to detect each step and record it. If the time when the step is recorded you would then be able to determine the time used walking, the distance traveled and approximate the energy used. Acording to [http://en.wikipedia.org/wiki/Pedometer Wikipedia] this has been done in other devices.
 
@@ -819,14 +819,14 @@ I think it needs some buttons to go back or forward and control the mouse to sho
 But with the mouse clicks I think that we need a short time between the clicks in example 1 second. Because when you make a mouse 
 click than to fast than you must go back.
 
-Some similar functionality will be implemented during SoC 08. More info at [[OpenMoko Bluetooth remote controller]]
+Some similar functionality will be implemented during SoC 08. More info at [[Openmoko Bluetooth remote controller]]
 
 ==== Amarok and other Media Player remote control ====
 
-Control Amarok or any other Media Player with OpenMoko (as a remote control). Bluetooth or WLAN could be used as protocol to send and receive the data. Maybe a WebInterface of Amarok is a start. Can be used on parties for a mobile music management.
+Control Amarok or any other Media Player with Openmoko (as a remote control). Bluetooth or WLAN could be used as protocol to send and receive the data. Maybe a WebInterface of Amarok is a start. Can be used on parties for a mobile music management.
 
 ==== Read informations with SMS ====
-Send a SMS with Code to the OpenMoko (from a specific number).
+Send a SMS with Code to the Openmoko (from a specific number).
 For example to send get the GPS coordinates from a stolen Neo (or if you don't know where your Neo is).
 
 ==== OpenRemote ====
@@ -840,7 +840,7 @@ The daemon could expose a DBus interface so to permit other programs to be notif
 
 ==== General Filesystem Encryption ====
 
-If anyone wants to get your private data saved on your OpenMoko device, he should have to get through a high security mechanism like dm-crypt. The question is how much CPU power would be needed. 
+If anyone wants to get your private data saved on your Openmoko device, he should have to get through a high security mechanism like dm-crypt. The question is how much CPU power would be needed. 
 Would it be an idea to encrypt only the private data like phone numbers, preferences, address book etc. (like /home/$USER).
 
 http://luks.endorphin.org
@@ -929,7 +929,7 @@ Music can be played through a Bluetooth headset, but would stop playing when a c
 
 === Walkie Talkie ===
 
-Let OpenMoko devices connect to one another via bluetooth or another connection method (GPRS for long distance but high latency, probably Wifi on P2), and hold a conversation.
+Let Openmoko devices connect to one another via bluetooth or another connection method (GPRS for long distance but high latency, probably Wifi on P2), and hold a conversation.
 
 Features for this applications can be:
 * Push To Talk (PTT) button
@@ -1012,7 +1012,7 @@ Use the phone to run your OpenOffice.org Impress presentation remotely using Blu
 * At the end of a presentation, a "navigator" could allow to easily jump to any slide in the presentation by clicking on it on the phone.
 ** When you right-click in a running OO.org Impress presentation, you can choose "got o slide..." and select any slide to jump to.
 
-Some similar functionality will be implemented during SoC 08. More info at [[OpenMoko Bluetooth remote controller]]
+Some similar functionality will be implemented during SoC 08. More info at [[Openmoko Bluetooth remote controller]]
 
 ==== Initiated from another device ====
 Remote control over Bluetooth from other devices to control media player (play, pause, next, previous, volume control),  camera (capture image), etc.
@@ -1035,19 +1035,19 @@ When in range of the car navigation system, remember the position (perhaps check
 
 === [[Bluetooth powered Multi-SIM support]] ===
 
-As the Neo1971 does not come with dual-SIM support this could be solved by joining your old bluetooth-enabled mobile to your OpenMoko-phone.
+As the Neo1971 does not come with dual-SIM support this could be solved by joining your old bluetooth-enabled mobile to your Openmoko-phone.
 
-Let SIM card A be in your OpenMoko-phone and SIM card B in your old mobile:
-* Incoming call on SIM card B - the OpenMoko-phone acts as a headset(Bluetooth Headset profile)
-* Calling out via SIM card B - the OpenMoko-phone acts again as a headset
+Let SIM card A be in your Openmoko-phone and SIM card B in your old mobile:
+* Incoming call on SIM card B - the Openmoko-phone acts as a headset(Bluetooth Headset profile)
+* Calling out via SIM card B - the Openmoko-phone acts again as a headset
 * Same for Short Messages/MMS/Internet
-This way you'd have your old phone switched silent and connected to your OpenMoko-phone that handles all the calls and one can select which SIM card to use.
+This way you'd have your old phone switched silent and connected to your Openmoko-phone that handles all the calls and one can select which SIM card to use.
 Advantage: No 'switching' between cards
 Disadvantage: Second mobile needs to be in range(e.g. handbag) and charged every once in a while.
 
 ===Internet Gateway===
 
-If the device could function as a Bluetooth router/gateway to the internet via the GPRS/data connector, then you could use it to get network connectivity from your laptop and other devices while on the road.  Many smartphones can be configured as modems via Bluetooth for use as Dial-Up Networking connectors, and that should be the minimum target.  Ideally, if the WiFi functionality was used so the OpenMoko could be an 802.11 router or peer to peer gateway for a laptop, this would be even better.  The full bandwidth of GPRS or whatever network is available would then be available.
+If the device could function as a Bluetooth router/gateway to the internet via the GPRS/data connector, then you could use it to get network connectivity from your laptop and other devices while on the road.  Many smartphones can be configured as modems via Bluetooth for use as Dial-Up Networking connectors, and that should be the minimum target.  Ideally, if the WiFi functionality was used so the Openmoko could be an 802.11 router or peer to peer gateway for a laptop, this would be even better.  The full bandwidth of GPRS or whatever network is available would then be available.
 
 === Social Networking ===
 
@@ -1096,7 +1096,7 @@ HSDPA support and the like, so that users can connect directly with the internet
 
 === Auto Update ===
 
-A small tool which is configurable to download the latest OpenMoko and OpenMoko related software. Maybe if any internet connection is available or a minimum of bandwith is available then the auto update would download only security related or the whole system etc. .
+A small tool which is configurable to download the latest Openmoko and Openmoko related software. Maybe if any internet connection is available or a minimum of bandwith is available then the auto update would download only security related or the whole system etc. .
 
 === Vibrate Pattern Recorder ===
 
@@ -1114,12 +1114,12 @@ Provide a method to use the touchscreen as input device for a nearby desktop mac
 
 Could emulate a pointer device (mouse) or even keyboard using standard bluetooth/USB interfaces for such a device.
 
-Use case: Alice is lazing on a couch and doesn't want to get up to do some minor interaction with the computer.  She can see the screen and uses the OpenMoko device as a mouse and/or keyboard to interact with the computer.
+Use case: Alice is lazing on a couch and doesn't want to get up to do some minor interaction with the computer.  She can see the screen and uses the Openmoko device as a mouse and/or keyboard to interact with the computer.
 
 === Advanced Notification And Ringtone Manager ===
 {{Main|Wishlist-ANARM}}
 
-ANARM would be an application for handling all event-based audible notifications from an OpenMoko device.
+ANARM would be an application for handling all event-based audible notifications from an Openmoko device.
 
 === Location based reminders ===
 {{Main|Wishlist:Location_based_reminders}}
@@ -1207,7 +1207,7 @@ A bluetooth mini-qwerty keyboard that straps to my wrist!
 I think the Neo1973 should have a normal SD card slot as the micro is too small, and the SDs have more space. [unknown author]
 
 SD Cards now support 32GB. Their storage density will always be multiples ahead of microSD (now at only 2GB). An SD Card slot will:
-* Provide enough storage to '''turn an OpenMoko into a music (MP3) jukebox''' large enough for entire music collections, like an iPod with Bluetooth for the car.
+* Provide enough storage to '''turn an Openmoko into a music (MP3) jukebox''' large enough for entire music collections, like an iPod with Bluetooth for the car.
 * Enable '''storage''' of:
 ** podcasts, full-length movies, or large photo collections
 ** photo and video from an on-board high-res camera
@@ -1221,7 +1221,7 @@ SD Cards now support 32GB. Their storage density will always be multiples ahead 
 ** the internet, via wifi or phone network
 * Enable editing of videos and photos obtained from external cameras
 
-Without an easily accessible higher storage SD Card slot, many users will soon be playing the juggling game of which data to delete from the much smaller and harder to swap microSD card. This is especially true for OpenMoko users, who are more likely to be power users than is the average mobile phone carrying population. Why carry an OpenMoko and an iPod, when you can simply add an SD Card slot?
+Without an easily accessible higher storage SD Card slot, many users will soon be playing the juggling game of which data to delete from the much smaller and harder to swap microSD card. This is especially true for Openmoko users, who are more likely to be power users than is the average mobile phone carrying population. Why carry an Openmoko and an iPod, when you can simply add an SD Card slot?
 --[[User:Pedro|Pedro]] 20:06, 17 March 2008 (CET)
 
 : This is not true. Now you can find 2GB micros at the price of 20-30 euros. Too small for what?? --[[User:V0n0|V0n0]] 22:06, 28 December 2007 (CET)
