Replacing 'OpenMoko' with 'Openmoko'

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -2,7 +2,7 @@ This page details hardware features which some would like to go into future phon
 
 Related pages are:
 *[[Wishlist - Hardware - Novel Devices]] - openmoko will run on a large number of devices in the future, some of which may be DVD players, cameras, or convergance devices.  
-*[[Wishlist:Unlikely]] - Hardware that is unlikely to appear in any OpenMoko device, due to it being impossible to fabricate with near-term technology, or for other reasons.
+*[[Wishlist:Unlikely]] - Hardware that is unlikely to appear in any Openmoko device, due to it being impossible to fabricate with near-term technology, or for other reasons.
 *[[Wishlist:Accessories]] - Accessories that people would like, that connect easily to the phone - initially primarily for the Neo1973 
 *[[Wishlist:Expansion]] - add-ons to the phone, maybe involving hardware changes, and software and hardware protocols to implement these.
 
@@ -48,7 +48,7 @@ While the project is ongoing and general in scope, it has set itself some specif
 ==Camera==
 
 * A camera that can take reasonable quality video and pictures is something many want. Applications vary from simple snapping, to gesture interfaces, video conferencing, barcode reading, business card reading, healthcare, servicing, biometric identification, and more.
-** Unlike stand-alone cameras, an OpenMoko camera could integrate EXIF information from GPS, compass, and internet, making it far more valuable.
+** Unlike stand-alone cameras, an Openmoko camera could integrate EXIF information from GPS, compass, and internet, making it far more valuable.
 
 * Some people can't take cameras into work - a model without the camera, or some way of removing the camera would be useful or leave the camera chip in place and have a removable lens assembly and replacement backcover.
 *See [[Hardware:Neo1973:Alternate_Cases:Camera | Alternate Cases:Camera]] for phone casing suggestions.
@@ -84,7 +84,7 @@ I'd recommend the
 43mm x 57mm (2.8inch diagonal) is tiny.  A 53mm x 71mm (3.5 inch diagonal) like on the TD035STEE1 would be a nice improvement.  A widescreen format at about 53mm x 82.5mm instead of the 3:4 aspect ratio would be even cooler (if one could be found).
 
 ====Higher resolution screen====
-The current OpenMoko hardware has a screen of size 2.8" and resolution 640 x 480 (VGA).
+The current Openmoko hardware has a screen of size 2.8" and resolution 640 x 480 (VGA).
 
 See this LCD panel: http://www.engadget.com/2006/12/27/hitachi-does-800-x-480-display-for-phones/
 
@@ -161,7 +161,7 @@ Here is a concept drawing of a possible neo1973 gaming version:
 <br/>
 Shoulder buttons would be a great addition, too. It would be interesting if there was a total 4 of them, one for every corner. It would make the phone very flexible for rotating and 2 to 6 players playing on one device.
 <br/>
-:''Note'' : The [http://en.wikipedia.org/wiki/Tapwave_Zodiac Tapwave Zodiac] Palm PDA / Game console hybrid had a similar setup - with an analog stick on the left (also used for quick selection using a radial main menu when working as a PDA), 4 buttons on the right (also configurable for shortcuts when using the device as PDA), and 2 shoulder buttons. Also it had and still has an enthusiastic scene of homebrew development (almost any console emulator for PalmOS can also take advantage of the additional buttons and graphic power of the device). If we also take into account the success encountered by the [http://en.wikipedia.org/wiki/GP32 GP32] in the past and the [http://en.wikipedia.org/wiki/GP2X GP2X] currently on the homebrew scene, it's not unreasonable to plan a future OpenMoko device with both a SmartPhone/PDA functionnality ''and'' hand-held console targeting homebrew development.
+:''Note'' : The [http://en.wikipedia.org/wiki/Tapwave_Zodiac Tapwave Zodiac] Palm PDA / Game console hybrid had a similar setup - with an analog stick on the left (also used for quick selection using a radial main menu when working as a PDA), 4 buttons on the right (also configurable for shortcuts when using the device as PDA), and 2 shoulder buttons. Also it had and still has an enthusiastic scene of homebrew development (almost any console emulator for PalmOS can also take advantage of the additional buttons and graphic power of the device). If we also take into account the success encountered by the [http://en.wikipedia.org/wiki/GP32 GP32] in the past and the [http://en.wikipedia.org/wiki/GP2X GP2X] currently on the homebrew scene, it's not unreasonable to plan a future Openmoko device with both a SmartPhone/PDA functionnality ''and'' hand-held console targeting homebrew development.
 
 ===Thumb keyboard or keyboard attachment accessory===
 *Could be slide out or clamshell (hinge on long side) design with an external OLED. The keyboard should be protected when not in use.
@@ -384,7 +384,7 @@ Infrared LED on top of device with universal remote software so you can control 
 ==Mobile Communication options==
 
 ===Generic Access Network / Unlicensed Mobile Access===
-This technology requires cooperation from the cellular provider, but [http://en.wikipedia.org/wiki/Unlicensed_Mobile_Access UMA/GAN] is already offered by T-Mobile in the United States, and perhaps others in other countries.  Allowing the user to roam from GSM to wifi, this technology can save the end user a significant amount of money, and also allow the user to deploy coverage where there was none before.  There are only a few UMA capable phones currently, but it would be great if this could be made to work on a phase 2 type OpenMoko device.
+This technology requires cooperation from the cellular provider, but [http://en.wikipedia.org/wiki/Unlicensed_Mobile_Access UMA/GAN] is already offered by T-Mobile in the United States, and perhaps others in other countries.  Allowing the user to roam from GSM to wifi, this technology can save the end user a significant amount of money, and also allow the user to deploy coverage where there was none before.  There are only a few UMA capable phones currently, but it would be great if this could be made to work on a phase 2 type Openmoko device.
 
 Note that this features requires more advanced access to the GSM modem. 
 Special messages needs to be exchanged with the network.
@@ -583,7 +583,7 @@ Instead of using a counter-weighted motor to provide a vibrate function, a small
 Along the lines of add-on cards, only looking at it from a different angle, I'd like to see a "faceless" openmoko with a documented hardware interface for both communicating with it and inserting it into other devices. Even the keypad/screen/battery would be attached, openmoko itself would just be faceless sliver of hardware with a documented interface and an API for communicating with the innards.
 
 ===Running without battery===
-Please make it possible to run the device without a battery inserted (with the charger attached). I have several mobile phones which do not work anymore (even when attached to the charger) because the battery is worn out and new batteries are not available. I want the OpenMoko to be usable when the battery is worn out.
+Please make it possible to run the device without a battery inserted (with the charger attached). I have several mobile phones which do not work anymore (even when attached to the charger) because the battery is worn out and new batteries are not available. I want the Openmoko to be usable when the battery is worn out.
 
 ===Make GSM/CDMA/WiFi/WiMax/GPS plugable===
 Please make Openmoko mobile as PC GSM/CDMA/... just working like plugable cards, they are cards/adaptor for the DEVICE only. the user may eject GSM module and inject with CDMA module. the DEVICE may provide several slot to allow user choose wifi/wimax/sd/gps/harddisk/...
