Replacing 'OpenMoko' with 'Openmoko'

--- a/Wish_List_-_Openmoko_Ringtones_and_Sounds.mw
+++ b/Wish_List_-_Openmoko_Ringtones_and_Sounds.mw
@@ -106,10 +106,10 @@ Contact: gr@daysofsaturn.com
 ===Neo-Electro===
 
 A  collection of Futuristic and Fun sounds.
-*Start-up Sound: http://bigmax.info/music/OpenMokoStartUp.mp3
-*Ringtone: http://bigmax.info/music/OpenMokoRing.mp3
-*Error Alert: http://bigmax.info/music/OpenMokoRing.mp3
-*SMS Notification: http://bigmax.info/music/OpenMokoSMS.mp3
+*Start-up Sound: http://bigmax.info/music/OpenmokoStartUp.mp3
+*Ringtone: http://bigmax.info/music/OpenmokoRing.mp3
+*Error Alert: http://bigmax.info/music/OpenmokoRing.mp3
+*SMS Notification: http://bigmax.info/music/OpenmokoSMS.mp3
 
 ==Ringtones and sounds without theme==
 
