--- a/Wishlist%2FANARM.mw
+++ b/Wishlist%2FANARM.mw
@@ -1,5 +1,5 @@
 {{Wishlist}}
-The Advanced Notification And Ringtone Manager is an application for handling all event-based audible notifications from an OpenMoko device.  Would determine whether or not it is an appropriate time to audibly notify a user of various events, by checking the current [[#Profiles|profiles]].
+The Advanced Notification And Ringtone Manager is an application for handling all event-based audible notifications from an Openmoko device.  Would determine whether or not it is an appropriate time to audibly notify a user of various events, by checking the current [[#Profiles|profiles]].
 The overall operation is analagous to a firewall.  It would also provide the interface for any application to create notifications through inter-process communication(using dbus?). It might be closely connected to the [[Wishlist:Point_of_Interest_Framework]]
 
 === Profiles ===
@@ -7,7 +7,7 @@ Notifications are allowed or denied(silenced) based on the current Profile, whic
 A profile consists of an set of "firewall rules".  Each rule can either ALLOW or DENY notifications for a single [[#Events|event]], or [[#Event Classes|class of events]].
 Each profile and its rules are independent from other profiles.
 The current profile could be selected manually, or automatically depending on time of day or possibly even the GPS location.
-profile are like DEFCON levels for an OpenMoko device.
+profile are like DEFCON levels for an Openmoko device.
 
 Examples of possible profiles:
 *Completely free
