Replacing 'OpenMoko' with 'Openmoko'

--- a/Wishlist%2FBible_Reader.mw
+++ b/Wishlist%2FBible_Reader.mw
@@ -18,7 +18,7 @@ Here are the applications runing on Linux desktop:
 [http://www.crosswire.org/bibledesktop/ BibleDesktop] - Java, based on JSword
 
 
-maybe one of this can be ported to OpenMoko. 
+maybe one of this can be ported to Openmoko. 
 [[Category:User]]
 [[Category:Ideas| ]]
 [[Category:Software ideas]]
